--- a/index.html
+++ b/index.html
@@ -102,7 +102,95 @@
 
     <main role="main" class="container">
       <div class="row">
-        <div class="col-md-9"></div>
+        <div class="col-md-9">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="card mb-3">
+                <div class="card-body">
+                  Kategori: <strong>Semua kategori</strong>
+                  <span class="float-right"
+                    >Urutan Harga:
+                    <a href="#" class="badge badge-primary">Termurah</a> |
+                    Urutan Harga:
+                    <a href="#" class="badge badge-primary">Termahal</a>
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="card mb-3">
+                <img
+                  src="http://placehold.co/100x70"
+                  alt=""
+                  class="card-img-top"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Product Title</h5>
+                  <p class="card-text"><strong>Rp. 100.000,-</strong></p>
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  </p>
+                  <a href="#" class="badge badge-primary">
+                    <i class="fas fa-tags"></i> Kategori
+                  </a>
+                </div>
+                <div class="card-footer">
+                  <form action="">
+                    <div class="input-group">
+                      <input type="number" class="form-control" />
+                      <div class="input-group-append">
+                        <button class="btn btn-primary">Add to Cart</button>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="card mb-3">
+                <img
+                  src="http://placehold.co/100x70"
+                  alt=""
+                  class="card-img-top"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Product Title</h5>
+                  <p class="card-text"><strong>Rp. 100.000,-</strong></p>
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  </p>
+                  <a href="#" class="badge badge-primary">
+                    <i class="fas fa-tags"></i> Kategori
+                  </a>
+                </div>
+                <div class="card-footer">
+                  <form action="">
+                    <div class="input-group">
+                      <input type="number" class="form-control" />
+                      <div class="input-group-append">
+                        <button class="btn btn-primary">Add to Cart</button>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <nav aria-label="Page navigation example">
+            <ul class="pagination">
+              <li class="page-item">
+                <a class="page-link" href="#">Previous</a>
+              </li>
+              <li class="page-item"><a class="page-link" href="#">1</a></li>
+              <li class="page-item"><a class="page-link" href="#">2</a></li>
+              <li class="page-item"><a class="page-link" href="#">3</a></li>
+              <li class="page-item"><a class="page-link" href="#">Next</a></li>
+            </ul>
+          </nav>
+        </div>
         <div class="col-md-3">
           <div class="row">
             <div class="col-md-12">
